Time Series, Histograms, CDF and CCDF

--- a/Matlab/matfiles.ipynb
+++ b/Matlab/matfiles.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -131,6 +131,38 @@
     "\n",
     "print(b)\n",
     "print(sum(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mm(a, b):\n",
+    "    c = [0] * len(b)\n",
+    "    for i in range(len(b)):        \n",
+    "        c[i] = a * b[i]\n",
+    "    return c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 10, 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 5\n",
+    "b = [1, 2, 3]\n",
+    "print(mm(a, b))"
    ]
   }
  ],
